--- a/ann.html
+++ b/ann.html
@@ -422,13 +422,13 @@
             </label>
             <div class="menubar">
                 <ul class="menu">
-                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a class="active" href="ann.html">ANNOUNCEMENTS</a></li>
                     <li>
                         <input type="checkbox" id="about">
                         <label class="menubarABT" for="about">ABOUT</label>
                         <ul class="submenu" id="submenuABT">
-                            <li><a href="index.html">DESCRIPTION</a></li>
+                            <li><a href="desc.html">DESCRIPTION</a></li>
                             <li><a href="miss.html">MISSION</a></li>
                             <li><a href="vis.html">VISION</a></li>
                             <li><a href="ach.html">ACHIEVEMENTS</a></li>
